--- a/src/scss/ui/header/_barra.scss
+++ b/src/scss/ui/header/_barra.scss
@@ -7,5 +7,22 @@
   @include m.tablet {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+  }
+
+  &__navegacion {
+    @include m.tablet {
+      display: flex;
+      gap: 4rem;
+    }
+  }
+
+  &__link {
+    color: v.$blanco;
+  }
+
+  &__nombre {
+    color: v.$blanco;
+    margin: 0;
   }
 }
