--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -1,18 +1,24 @@
-@use 'base/variables' as v;
+@use "base/variables" as v;
 
-h1, h2, h3 {
-    margin: 0;
-    line-height: 1.5;
+h1,
+h2,
+h3 {
+  margin: 0;
+  line-height: 1.5;
 }
 h1 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 h2 {
-    font-size: 3.2rem;
+  font-size: 3.2rem;
 }
 h3 {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+[class$="__heading"] {
+  margin: 2rem 0;
 }
