--- a/src/scss/ui/Contenido/_lugares.scss
+++ b/src/scss/ui/Contenido/_lugares.scss
@@ -6,9 +6,7 @@
     display: grid;
     grid-template-columns: repeat(4, 30rem);
     column-gap: 4rem;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    scroll-snap-type: x mandatory;
+    @include m.scrollHorizontal;
 
     @include m.tablet {
       @include m.grid(2, 2rem);
@@ -21,5 +19,11 @@
 }
 
 .lugar {
-  scroll-snap-align: center;
+  &__imagen {
+    border-radius: 1rem;
+  }
+
+  &__nombre {
+    font-size: 1.8rem;
+  }
 }
